syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "internal/server/grpc_server";

// Message
message Empty {
}

// User request
message UserListRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message UserIDRequest {
    string id = 1;
}

message UserCreateRequest {
    string loginId = 1;
    string password = 2;
    string phone = 3;
    string email = 4;
}

message UserUpdateRequest {
    string id = 1;
    string password = 2;
    string phone = 3;
    string email = 4;
}

// User response
message UserListResponse {
    repeated UserInfoResponse uesrs = 1;
}

message UserInfoResponse {
    string id = 1;
    string loginId = 2;
    string phone = 3;
    string email = 4;
}

// Token request
message TokenCreateRequest {
    string loginId = 1;
    string password = 2;
}

// Token response
message TokenInfoResponse {
    string token = 1;
    google.protobuf.Timestamp issuedAt = 2;
    google.protobuf.Timestamp expiresAt = 3;
}

// Service
service User {
    rpc ListUser(UserListRequest) returns (UserListResponse) {}
    rpc CreateUser(UserCreateRequest) returns (UserInfoResponse) {}
    rpc GetUser(UserIDRequest) returns (UserInfoResponse) {}
    rpc UpdateUser(UserUpdateRequest) returns (Empty) {}
    rpc DeleteUser(UserIDRequest) returns (Empty) {}
}

service Token {
    rpc CreateToken(TokenCreateRequest) returns (TokenInfoResponse) {}
}